# ExtensionShield

./: .dockerignore  .env.example  .env.example--  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .pylintrc  .railway-deploy  ACKNOWLEDGMENTS.md  COMMERCIAL.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  FREELANCER_WORKFLOW.md  GET_STARTED.md  HEADER_MEGAMENU_PASTE_PACKAGE.md  LICENSE  Makefile  OPEN_CORE_BOUNDARIES.md  README.md  SECURITY.md  TRADEMARK.md  docker-compose.yml  env.production.template  example_workflow.py  landing-page-copy.json  package-lock.json  package.json  pyproject.toml  railway.toml  requirements.txt
contracts/: analyzer_interface.py  frontend_api_spec.yaml  llm_prompt_template.yaml  semgrep_rule_template.yaml
data/intel/: README.md  (+1 more)
deploy/: README.md  env.production.template  railway.toml
docs/: ARCHITECTURE.md  CLOUDFLARE_SITEMAP_GOOGLE.md  COMPETITIVE_BENCHMARK_ANALYSIS.md  COMPLIANCE_EXPLAINED.md  COMPLIANCE_SCANNER_README.md  CONTRIBUTING.md  EMAIL_REDIRECT_VERIFY_HOSTINGER.md  HOSTINGER_DNS_CHECKLIST.md  PERSISTENCE_STORAGE_AUDIT.md  PRESENTATION_DATA_TABLES.md  SUPABASE_SETUP.md  getting_watsonx_api_key.md
frontend/: .env.example  FORCE_DARK_THEME.md  RESTART_INSTRUCTIONS.md  force-refresh.sh  index.html  package-lock.json  package.json  restart-dev.sh  vite.config.js
scripts/: README.md  create_freelancer_repo.sh  send-resend-test-email.mjs  start_api.sh  test_watson_connection.py  validate_submission.py
tests/: test_layer_details_generator.py  test_layer_details_validators.py  test_llm_validators.py  test_open_core_boundary.py  (+1 more)
(+240 files in other folders)
